--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
     "socket.io": "^4.6.1",
+    "socket.io-client": "^4.6.1",
     "superjson": "1.12.2",
     "zod": "^3.21.4"
   },
